--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <h1>Hello Recursion</h1>
         <h1>Hello Red team</h1>
+        <h1>Hello blue team</h1>
     </div>
 </body>
 </html>
